# taxi_demand_predictor

./: .gitignore  Makefile  README.md  first-proj-385722-6eba06178fdc.json  pyproject.toml
.github/workflows/: feature_pipeline.yaml  feature_pipeline_with_cache.yml  inference_pipeline.yml  model_training_pipeline.yml
Python 3.9/: License.rtf  ReadMe.rtf
Python 3.9/IDLE.app/Contents/: Info.plist
Python 3.9/IDLE.app/Contents/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeSignature
Python 3.9/Python Launcher.app/Contents/: Info.plist
Python 3.9/Python Launcher.app/Contents/MacOS/: Python Launcher
data/transformed/: nyc_locs.csv
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: backfill_inference.py  feature_pipeline.py
src/: config.py  data.py  frontend.py  inference.py  logger.py  plot.py
