[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anchit017 <anchitc97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
jupyter = "^1.0.0"
wget = "^3.2"
requests = "^2.29.0"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
tqdm = "^4.65.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
wheel = "^0.40.0"
cmake = "^3.26.3"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
optuna = "^3.1.1"
python-dotenv = "^1.0.0"
hopsworks = "^3.0.5"
streamlit = "^1.22.0"
numpy = "^1.24.3"
gpd = "^1.1.1"
dask = "^2023.4.1"
watchdog = "^3.0.0"
gsheetsdb = "^0.1.13.1"
certifi = "^2022.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
